# eval-cognistx

./: pyproject.toml
prompts/client/: v0.txt
prompts/default/: v0.txt
